Fix scrollbar in ToC

--- a/css/main.less
+++ b/css/main.less
@@ -4409,12 +4409,8 @@ ul {
         }
 
         .tree-of-content-container {
-            position: absolute;
-            z-index: 105;
             opacity: 0;
             left: 0;
-            top: 0;
-            bottom: 0;
             width: 100%;
             height: 100%;
             transform: scale(0.9);
